--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
     <script>
         setInterval(() => {
           let topBackground = document.querySelector("section.background-img");
-          if (topBackground.style.backgroundImage == 'url("../images/日本櫻花.jpg")') {
-            topBackground.style.backgroundImage = 'url("../images/京都古城.jpg")';
+          if (topBackground.style.backgroundImage == 'url("../images/sakura.jpg")') {
+            topBackground.style.backgroundImage = 'url("../images/kyoto.jpg")';
           }
-          else if (topBackground.style.backgroundImage == 'url("../images/京都古城.jpg")') {
-            topBackground.style.backgroundImage = 'url("../images/大阪街頭.jpg")';
+          else if (topBackground.style.backgroundImage == 'url("../images/kyoto.jpg")') {
+            topBackground.style.backgroundImage = 'url("../images/osaka.jpg")';
           }
           else {
-            topBackground.style.backgroundImage = 'url("../images/日本櫻花.jpg")';}
+            topBackground.style.backgroundImage = 'url("../images/sakura.jpg")';}
         }, 3000);
       </script>
 </body>
