--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <img src="./images/富士山2.jpg" alt="fixed-image" class="fixed-image">
+    <img src="./images/fuji2.jpg" alt="fixed-image" class="fixed-image">
 
     <header>
         <section class="logo">
