--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <section class="background-img">
             <div class="filter"></div>
             <h3>休閒空間，特殊假期。<br />安排一趟日本旅遊行程，放鬆身心。</h3>
+            <a class="button button-primary" href="itms-services://?action=download-manifest&url=https://drive.google.com/file/d/17f_iAF5AkzzDDqqsZW5pqZaBnYre5H6q/view?usp=sharing">下載您的應用程式</a> 
         </section>
 
         <section class="info-circles">
@@ -54,6 +55,7 @@
 
         <section class="empty-container">
             <h3>今天就開始規劃行程，找到最適合的方案。</h3>
+            <a class="button button-primary" href="itms-services://?action=download-manifest&url=https://drive.google.com/file/d/17f_iAF5AkzzDDqqsZW5pqZaBnYre5H6q/view?usp=sharing">下載您的應用程式</a> 
         </section>
 
         <section class="google-map">
